local-kubernetes/kind/workloads/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
spec:
  rules:
  - host: backstage.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backstage
            port:
              number: 443
  - http:
      paths:
      - pathType: Prefix
        path: /dashboard
        backend:
          service:
            name: backstage
            port:
              number: 443
